# kphp

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lldbinit  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.d  Dockerfile  README.md  bench_shared_memory.sh  common-net-functions.cpp  common-net-functions.h  common-php-functions.h  common.h  common.tl  common.tlo  cross-build.sh  dsfdsf  functions.txt  kphp2cpp.cpp  lldb_addons.py  php-cli.cpp  php-engine-vars.c  php-engine-vars.cpp  php-engine-vars.h  php-engine.c  php-engine.cpp  php-engine.h  php-lease.c  php-lease.cpp  php-lease.h  php-link-test.cpp  php-main-cli.cpp  php-main-server.cpp  (+23 more)
.github/: CODEOWNERS
builtin-functions/: _functions.txt  _functions.txt.wrapper  ffi.txt  kml.txt  kphp_internal.txt  kphp_toggles.txt  spl.txt  uberh3.txt
cmake/: apply_patches.cmake  external-libraries.cmake  init-compilation-flags.cmake  init-compilation-options.cmake  init-global-vars.cmake  popular-common.cmake  third-party.cmake  utils.cmake
common/: array_stat.h  base64.cpp  base64.h  c-tree.h  cacheline.h  common-tests.cmake  common.cmake  container_of.h  cpuid.cpp  cpuid.h  crc32.cpp  crc32.h  crc32_aarch64.cpp  crc32_arm64.cpp  crc32_generic.cpp  crc32_generic.h  crc32_x86_64.cpp  crc32c-test.cpp  crc32c.cpp  crc32c.h  crc32c_aarch64.cpp  crc32c_arm64.cpp  crc32c_x86_64.cpp  cycleclock.h  dl-utils-lite.cpp  dl-utils-lite.h  exact-division.h  exit-codes.h  fast-backtrace.cpp  fast-backtrace.h  io.h  kernel-version.cpp  kernel-version.h  kprintf.cpp  kprintf.h  macos-ports.cpp  macos-ports.h  md5.cpp  md5.h  mysql.h  (+28 more)
compiler/: analizer.cpp  analizer.h  analyzer.cpp  analyzer.h  bicycle.cpp  bicycle.h  cfg.cpp  cfg.h  class-assumptions.cpp  class-assumptions.h  class-members.cpp  class-members.h  code-gen.h  common.h  common_sources.h.in  compiler-core.cpp  compiler-core.h  compiler-core.hpp  compiler-settings.cpp  compiler-settings.h  compiler.cmake  compiler.cpp  compiler.h  composer.cpp  composer.h  const-manipulations.h  cpp-dest-dir-initializer.cpp  cpp-dest-dir-initializer.h  data.cpp  data.h  data_ptr.h  debug.cpp  debug.h  enviroment.cpp  enviroment.h  foreach_op.h  foreach_ptype.h  format-parser.h  func-to-file-map.cpp  func-to-file-map.h  (+81 more)
docs/: .gitignore  Dockerfile  Gemfile  README.md  _config.yml  session_test.php
einit/: CMakeLists.txt
flex/: flex.cmake  flex.cpp  flex.h  vk-flex-data-gen.php  vk-flex-data.h
kphp-core/: include.h  kphp-core-allocator.h  kphp-core-context.h  kphp-core.cmake  kphp_core.h
net/: net-aes-keys-test.cpp  net-aes-keys.cpp  net-aes-keys.h  net-buffers.cpp  net-buffers.h  net-connections.cpp  net-connections.h  net-crypto-aes.cpp  net-crypto-aes.h  net-dc.cpp  net-dc.h  net-events.cpp  net-events.h  net-http-server.cpp  net-http-server.h  net-ifnet.cpp  net-ifnet.h  net-memcache-client.cpp  net-memcache-client.h  net-memcache-server.cpp  net-memcache-server.h  net-msg-buffers.cpp  net-msg-buffers.h  net-msg-part.cpp  net-msg-part.h  net-msg-test.cpp  net-msg.cpp  net-msg.h  net-mysql-client.cpp  net-mysql-client.h  net-reactor.cpp  net-reactor.h  net-sockaddr-storage.cpp  net-sockaddr-storage.h  net-socket-options.cpp  net-socket-options.h  net-socket.cpp  net-socket.h  net-tcp-connections.cpp  net-tcp-connections.h  (+11 more)
platform/: allocator.cpp  main.cpp  platform.cmake  platform.h
runtime/: allocator.cpp  allocator.h  array.cpp  array.h  array.inl  array_decl.inl  array_functions.cpp  array_functions.h  array_iterator.h  bcmath.cpp  bcmath.h  city_hash64.cpp  city_hash64.h  class.cpp  class.h  class_instance.cpp  class_instance.h  class_instance.inl  class_instance_decl.inl  common_template_instantiations.cpp  common_template_instantiations.h  comparison_operators.inl  confdata-functions.cpp  confdata-functions.h  confdata-global-manager.cpp  confdata-global-manager.h  ctype.h  (+209 more)
runtime-common/: runtime-common.cmake
runtime-core/: include.h  runtime-core-context.h  runtime-core.cmake  runtime-core.h
runtime-light/: context.h  header.h  runtime-light.cmake  runtime-light.cpp  runtime.cmake  runtime.cpp  scheme.h
(+6184 files in other folders)
